# uv_ruff_sample

./: README.md
.github/workflows/: subdir-uv-test.yml  subdir-uv.yml  super-linter-only-changes.yml  super-linter.yml
subdir/: LICENSE  hello.py  pyproject.toml  webapp.py
subdir/.devcontainer/: devcontainer.json
subdir/tests/: test_util.py
subdir/uv_ruff/: util.py
subdir/uv_ruff/gradio/: progress.py
