[project]
name = "example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.2",
    "gradio>=5.1.0",
    "langchain-community>=0.3.2",
    "langchain-core>=0.3.12",
    "langchain-openai>=0.2.2",
    "langserve[all]>=0.3.0",
]

[dependency-groups]
dev = ["ruff>=0.7.0", "pytest>=8.3.3", "pytest-cov>=5.0.0"]


[tool.ruff]
# default(Black) is 88, PEP8 is 79, Java is 100, Github is 119
line-length = 88

[tool.ruff.lint]
select = [
    # "E",   # pycodestyle
    # "F",   # Pyflakes
    # "UP",  # pyupgrade
    # "B",   # flake8-bugbear
    # "SIM", # flake8-simplify
    # "I",   # isort
    "ALL",
]
unfixable = [
    # https://zenn.dev/mutex_inc/articles/4183b992ccd701
    "F401",   # unused import
    "F841",   # unused variable
    "ERA001", # commented out code
]
ignore = [
    # "ANN1",   # missing type self and cls
    # "E999",   # syntax error
    # "UP027",  # unpacked list comprehension
    # "PT004",  # pytest missing fixture name underscore
    # "PT005",  # pytest incorrect fixture name underscore
    "D1", # undocumented
    # "TD001",  # invalid todo tag
    # "TD002",  # missing todo author
    # "TD003",  # missing todo link
    # "PD011",  # pandas use of dot values
]

[tool.pytest.ini_options]
# settings.jsonも合わせて変更すること
addopts = ["--doctest-modules", "--cov", "--cov-branch", "--ignore=.venv"]
testpaths = [
    "tests",
    "uv_ruff", # for doctest
]
